After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705062 - tagdemux: push mode code doesn't handle seeks
tagdemux: push mode code doesn't handle seeks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-29 07:25 UTC by Sjoerd Simons
Modified: 2013-07-29 09:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sjoerd Simons 2013-07-29 07:25:39 UTC
Reading the code of gst-libs/gst/tag/gsttagdemux.c it looks like seeks aren't handled properly in push mode, it simply pull the ranges out in a linear fashion regardless of what seeks are done
Comment 1 Sebastian Dröge (slomo) 2013-07-29 09:41:59 UTC
commit bb870b8b7bf008a754242b7972ed21cab39ee2e9
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Jul 29 11:40:57 2013 +0200

    tagdemux: Properly implement seeking if tagdemux is driving the pipeline
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705062