tagdemux: Properly implement seeking if tagdemux is driving the pipeline

https://bugzilla.gnome.org/show_bug.cgi?id=705062